faster vids, fix scrollbars

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,8 @@
   
   margin: 20px;
   height: calc(100vh - 40px);
+
+  margin-right: 5px;
 }
 
 
@@ -74,7 +76,7 @@
   line-height: 170%;
 
   padding-right: 90px;
-  margin-right: -16px;
+  /* margin-right: -16px; */
 }
 .copy > h2 {
   margin-top: 0;
